--- a/public/icons.html
+++ b/public/icons.html
@@ -30,6 +30,30 @@
           <svg id="svg-source" height="0" version="1.1"
   xmlns="http://www.w3.org/2000/svg" style="position:absolute; margin-left: -100%"
   xmlns:xlink="http://www.w3.org/1999/xlink">
+  <g id="chevron-left">
+    <path id="chevron-left" d="M13.25 28.089l-11.643-11.625q-0.661-0.661-0.661-1.616t0.661-1.616l11.643-11.625q0.661-0.661 1.616-0.661t1.616 0.661l1.339 1.339q0.661 0.661 0.661 1.616t-0.661 1.616l-8.679 8.679 8.679 8.661q0.661 0.679 0.661 1.625t-0.661 1.607l-1.339 1.339q-0.661 0.661-1.616 0.661t-1.616-0.661z"></path>
+</g>
+<g id="chevron-right">
+    <path id="chevron-right" d="M19.625 14.857q0 0.929-0.661 1.625l-11.643 11.625q-0.661 0.661-1.607 0.661t-1.607-0.661l-1.357-1.339q-0.661-0.696-0.661-1.625 0-0.946 0.661-1.607l8.679-8.679-8.679-8.661q-0.661-0.696-0.661-1.625 0-0.946 0.661-1.607l1.357-1.339q0.643-0.679 1.607-0.679t1.607 0.679l11.643 11.625q0.661 0.661 0.661 1.607z"></path>
+</g>
+<g id="chevron-up">
+    <path id="chevron-up" d="M28.768 21.714q0 0.946-0.661 1.607l-1.339 1.339q-0.679 0.679-1.625 0.679-0.964 0-1.607-0.679l-8.679-8.661-8.679 8.661q-0.643 0.679-1.607 0.679t-1.607-0.679l-1.339-1.339q-0.679-0.643-0.679-1.607 0-0.946 0.679-1.625l11.625-11.625q0.661-0.661 1.607-0.661 0.929 0 1.625 0.661l11.607 11.625q0.679 0.679 0.679 1.625z"></path>
+</g>
+<g id="chevron-down">
+    <path id="chevron-down" d="M28.768 12.571q0 0.946-0.661 1.607l-11.625 11.625q-0.679 0.679-1.625 0.679-0.964 0-1.607-0.679l-11.625-11.625q-0.679-0.643-0.679-1.607 0-0.946 0.679-1.625l1.321-1.339q0.696-0.661 1.625-0.661 0.946 0 1.607 0.661l8.679 8.679 8.679-8.679q0.661-0.661 1.607-0.661 0.929 0 1.625 0.661l1.339 1.339q0.661 0.696 0.661 1.625z"></path>
+</g>
+<g id="caret-down">
+    <path id="caret-down" d="M18.286 12.571q0 0.464-0.339 0.804l-8 8q-0.339 0.339-0.804 0.339t-0.804-0.339l-8-8q-0.339-0.339-0.339-0.804t0.339-0.804 0.804-0.339h16q0.464 0 0.804 0.339t0.339 0.804z"></path>
+</g>
+<g id="caret-up">
+    <path id="caret-up" d="M18.286 21.714q0 0.464-0.339 0.804t-0.804 0.339h-16q-0.464 0-0.804-0.339t-0.339-0.804 0.339-0.804l8-8q0.339-0.339 0.804-0.339t0.804 0.339l8 8q0.339 0.339 0.339 0.804z"></path>
+</g>
+<g id="caret-left">
+    <path id="caret-left" d="M11.429 8v16q0 0.464-0.339 0.804t-0.804 0.339-0.804-0.339l-8-8q-0.339-0.339-0.339-0.804t0.339-0.804l8-8q0.339-0.339 0.804-0.339t0.804 0.339 0.339 0.804z"></path>
+</g>
+<g id="caret-right">
+    <path id="caret-right" d="M10.286 16q0 0.464-0.339 0.804l-8 8q-0.339 0.339-0.804 0.339t-0.804-0.339-0.339-0.804v-16q0-0.464 0.339-0.804t0.804-0.339 0.804 0.339l8 8q0.339 0.339 0.339 0.804z"></path>
+</g>
   <g id="github">
     <path id="github" d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM25.502 25.502c-1.235 1.235-2.672 2.204-4.272 2.881-0.406 0.172-0.819 0.323-1.238 0.453v-2.398c0-1.26-0.432-2.188-1.297-2.781 0.542-0.052 1.039-0.125 1.492-0.219s0.932-0.229 1.438-0.406 0.958-0.388 1.359-0.633 0.786-0.563 1.156-0.953 0.68-0.833 0.93-1.328 0.448-1.089 0.594-1.781 0.219-1.456 0.219-2.289c0-1.615-0.526-2.99-1.578-4.125 0.479-1.25 0.427-2.609-0.156-4.078l-0.391-0.047c-0.271-0.031-0.758 0.083-1.461 0.344s-1.492 0.688-2.367 1.281c-1.24-0.344-2.526-0.516-3.859-0.516-1.344 0-2.625 0.172-3.844 0.516-0.552-0.375-1.075-0.685-1.57-0.93-0.495-0.245-0.891-0.411-1.188-0.5s-0.573-0.143-0.828-0.164-0.419-0.026-0.492-0.016-0.125 0.021-0.156 0.031c-0.583 1.479-0.635 2.839-0.156 4.078-1.052 1.135-1.578 2.51-1.578 4.125 0 0.833 0.073 1.596 0.219 2.289s0.344 1.286 0.594 1.781 0.56 0.938 0.93 1.328 0.755 0.708 1.156 0.953 0.854 0.456 1.359 0.633 0.984 0.313 1.438 0.406 0.95 0.167 1.492 0.219c-0.854 0.583-1.281 1.51-1.281 2.781v2.445c-0.472-0.14-0.937-0.306-1.394-0.5-1.6-0.677-3.037-1.646-4.272-2.881-1.235-1.235-2.204-2.672-2.881-4.272-0.7-1.655-1.055-3.414-1.055-5.23s0.355-3.575 1.055-5.23c0.677-1.6 1.646-3.037 2.881-4.272s2.672-2.204 4.272-2.881c1.655-0.7 3.415-1.055 5.23-1.055s3.575 0.355 5.23 1.055c1.6 0.677 3.037 1.646 4.272 2.881 1.235 1.235 2.204 2.672 2.881 4.272 0.7 1.655 1.055 3.415 1.055 5.23s-0.355 3.575-1.055 5.23c-0.677 1.6-1.646 3.037-2.881 4.272z"></path>
 </g>
@@ -2337,6 +2361,118 @@
           <p>To style an icon differently, simply add a class and style it however you want to override the default.</p>
 
           <div class="section-l cf">
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#chevron-left"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#chevron-left" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#chevron-right"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#chevron-right" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#chevron-down"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#chevron-down" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#chevron-up"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#chevron-up" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#caret-left"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#caret-left" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#caret-right"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#caret-right" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#caret-down"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#caret-down" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
+            <div class="icon-b cf">
+              <div class="icon-bl">
+                <div class="iconmelon">
+                  <svg viewBox="0 0 32 32">
+                    <g filter="">
+                      <use xlink:href="#caret-up"></use>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+              <div class="name-bl">
+                <input value="#caret-up" readonly="readonly" class="name-ble"/>
+              </div>
+            </div>
             <div class="icon-b cf">
               <div class="icon-bl">
                 <div class="iconmelon">
