--- a/public/styles.html
+++ b/public/styles.html
@@ -67,7 +67,7 @@
 
         <main role="main">
 
-            <h1>Header H1</h1>
+            <h1>Header H1 <strong>details</strong></h1>
             <p>Page headers</p>
 
             <h2>Header H2</h2>
