--- a/public/styles.html
+++ b/public/styles.html
@@ -67,20 +67,223 @@
 
         <main role="main">
 
-            <h1>Header H1 <strong>details</strong></h1>
-            <p>Page headers</p>
+            <hr><h2>Headers</h2><hr>
+            <section>
 
-            <h2>Header H2</h2>
-            <p>Section headers</p>
+                <h1>Header H1 <strong>details</strong></h1>
+                <p>Page headers</p>
 
-            <h3>Header H3</h3>
-            <p>Subsection header</p>
+                <h2>Header H2</h2>
+                <p>Section headers</p>
 
-            <h4>Header H4</h4>
-            <p>Label headers or attributes</p>
+                <h3>Header H3</h3>
+                <p>Subsection header</p>
 
-            <h5>Header H5</h5>
-            <p>????</p>
+                <h4>Header H4</h4>
+                <p>Label headers or attributes</p>
+
+                <h5>Header H5</h5>
+                <p>????</p>
+
+                <h6>Header h6</h6>
+                <p>????</p>
+            </section>
+
+            <hr><h2>Buttons</h2><hr>
+            <section>
+
+                <h3>Types</h3>
+
+                <a href="#" class="btn">btn</a>
+                <a href="#" class="btn btn--action">btn--action</a>
+                <a href="#" class="btn btn--destructive">btn--destructive</a>
+                <a href="#" class="btn btn--secondary">btn--secondary</a>
+                <a href="#" class="btn btn--disabled">btn--disabled</a>
+
+                <br><br>
+                <a href="#" class="btn btn--selected">btn--selected</a>
+                <a href="#" class="btn btn--not-selected">btn--not-selected</a>
+
+
+                <h3>Sizes</h3>
+                <a href="#" class="btn btn--tiny">btn--tiny</a>
+                <a href="#" class="btn btn--small">btn--small</a>
+                <a href="#" class="btn">btn</a>
+                <a href="#" class="btn btn--large">btn--large</a>
+
+                <h3>Button Lists</h3>
+                <ul class="button-list">
+                    <li><a href="#" class="btn">btn 1</a></li>
+                    <li><a href="#" class="btn">btn 2</a></li>
+                    <li><a href="#" class="btn">btn 3</a></li>
+                </ul>
+
+                <p class="mtm">Half Size</p>
+
+                <ul class="button-list button-list--half">
+                    <li><a href="#" class="btn">btn 1</a></li>
+                    <li><a href="#" class="btn">btn 2</a></li>
+                </ul>
+
+                <p class="mtm">Fixed Secondary</p>
+
+                <ul class="button-list button-list--half">
+                    <li><a href="#" class="btn">btn 1</a></li>
+                    <li class="button-list__fixed"><a href="#" class="btn">btn 2</a></li>
+                </ul>
+
+            </section>
+
+            <hr><h2>Icons</h2><hr>
+            <section>
+                <a href="icons.html">List of icons</a>
+
+                <p class="mtm mbn">Usage:</p>
+                <pre>&lt;svg class="icon"&gt;&lt;use xlink:href="/icons.svg#branch"&gt;&lt;/use&gt;&lt;/svg&gt;</pre>
+
+                <br><svg class="icon"><use xlink:href="/icons.svg#bullet"></use></svg>
+                <br><svg class="icon"><use xlink:href="/icons.svg#tick"></use></svg>
+                <br><svg class="icon"><use xlink:href="/icons.svg#github"></use></svg>
+                <br><svg class="icon"><use xlink:href="/icons.svg#squid"></use></svg>
+
+            </section>
+
+            <hr><h2>Status</h2><hr>
+            <section>
+
+                <p>Blocks</p>
+                <span class="status-block--info">status-block--info</span><br>
+                <span class="status-block--success">status-block--success</span><br>
+                <span class="status-block--error">status-block--error</span><br>
+                <span class="status-block--notice">status-block--notice</span><br>
+                <span class="status-block--warning">status-block--warning</span>
+
+                <p class="mtm">Icons</p>
+                <span class="status-icon--info">status-icon--info</span><br>
+                <span class="status-icon--success">status-icon--success</span><br>
+                <span class="status-icon--error">status-icon--error</span><br>
+                <span class="status-icon--notice">status-icon--notice</span><br>
+                <span class="status-icon--warning">status-icon--warning</span><br>
+                <span class="status-icon--thinking">status-icon--thinking</span>
+
+                <p class="mtm">Combination</p>
+
+                <span class="status-block--error">
+                    <span class="status-icon--info">inner icon</span>
+                </span>
+
+                <br><span class="status-block--info status-icon--thinking">
+                    block and icon
+                </span>
+
+                <br><span class="status-block--error">
+                    <svg class="icon"><use xlink:href="/icons.svg#spam-2"></use></svg> status-block--error with icon
+                </span>
+
+            </section>
+
+            <hr><h2>Alerts</h2><hr>
+            <section>
+
+                <div class="alert-bar">
+                    <h4>alert-bar</h4>
+                </div>
+
+                <div class="alert-bar--error">
+                    <h4>alert-bar--error</h4>
+                </div>
+
+                <div class="alert-bar--warning">
+                    <h4>alert-bar--warning</h4>
+                </div>
+
+                <div class="alert-bar--success">
+                    <h4>alert-bar--success</h4>
+                </div>
+
+
+                <div class="alert-bar">
+                    <h4>alert-bar</h4>
+                    <p>
+                        Additional details. lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+                    </p>
+                </div>
+
+
+            </section>
+
+            <hr><h2>Lists</h2><hr>
+            <section>
+
+                <p>No style</p>
+                <ul>
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <p>bare</b></p>
+                <ul class="list--bare">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <p>bullet</b></p>
+                <ul class="list--bullet">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <p>inline</p>
+
+                <code>inline-list</code>:
+                <ul class="inline-list">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <br>
+                <code>inline-list--comma</code>:
+                <ul class="inline-list--comma">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <br>
+                <code>inline-list--space</code>:
+                <ul class="inline-list--space">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <p class="mtm">stats</p>
+                <ul class="stat-list">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <p class="mtm">code</p>
+                <ul class="code-list">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <p class="mtm">legend</p>
+                <ul>
+                    <li class="list--legend"><b>Title_1</b><p>The second element is kept to the right of the title, regardless if it spans multiple lines</p></li>
+                    <li class="list--legend"><b>Title_2</b><p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p></li>
+                    <li class="list--legend">item 3</li>
+                </ul>
+
+            </section>
+
         </main>
     </body>
 </html>
